# KinectFusion-Cool-Edition

./: .gitignore  CMakeLists.txt  CMakeLists_linux.txt  Measurement.h  Pose_Estimation.cpp  Pose_Estimation.h  README.md  flipped_tsdf.off  mesh2.off  original_tsdf.off
src/: Frame.cpp  Frame.h  Frame_Pyramid.cpp  Frame_Pyramid.h  Kinect_Fusion.cpp  Kinect_Fusion.cu  Online.cpp  Pose_Estimation.cpp  Pose_Estimation.h  main
src/cpu/frame/: Frame.cpp  Frame.h  Frame_Pyramid.cpp  Frame_Pyramid.h  RealSense.cpp  RealSense.h
src/cpu/icp/: ICP.cpp  ICP.h
src/cpu/mesher/: Marching_Cubes.h
src/cpu/raytracing/: CMakeLists.txt  ImplicitSurface.h  Ray.cpp  Ray.h  Raycasting.cpp  Raycasting.h  Volume.cpp  Volume.h  main.cpp  main_cuda.cpp
src/cpu/tsdf/: CMakeLists.txt  kinect_fusion_utility.cpp  kinect_fusion_utility.h  test_tsdf.cpp  voxel.cpp  voxel.h  voxel_grid.cpp  voxel_grid.h
src/frame/: Frame.cpp  Frame.h  Frame_Pyramid.cpp  Frame_Pyramid.h
src/gpu/frame/: frame.cu
src/gpu/icp/: icp.cu
src/gpu/raytracing/: raycasting.cu  raycasting_refactored.cu
src/gpu/tsdf/: mesh_tsdf.off  tsdf.cu
src/icp/: GPU_icp.cpp  GPU_icp.h  NN.h  NearestNeighbor.h  icp.h
src/mapping_as_surface_reconstruction/: CMakeLists.txt  Marching_Cubes.h  kinect_fusion_utility.cpp  kinect_fusion_utility.h  test_tsdf.cpp  voxel.cpp  voxel.h  voxel_grid.cpp  voxel_grid.h
src/mesher/: CMakeLists.txt  Depth_Sphere_maker.py  Lookup_Tables.h  Marching_Cubes.h  Tables.h  main.cpp
src/raytracing/: CMakeLists.txt  ImplicitSurface.h  Ray.h  Raycasting.cpp  Raycasting.h  Volume.cpp  Volume.h  main.cpp  raycasting_refactored.cu
src/tsdf/: CMakeLists.txt  dept_range.py  kinect_fusion_utility.cpp  kinect_fusion_utility.h  test_tsdf.cpp  tsdf.cu  tsdf_gpu_debug  voxel_grid.cpp  voxel_grid.h
